--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "highlight.js": "^11.11.1",
+    "isomorphic-dompurify": "^2.22.0",
     "lucide-react": "^0.460.0",
     "mermaid": "^11.12.2",
     "react": "^19.2.3",
