feat(01-02): add session debug hooks for persistence verification
- Add useSessionDebug for comprehensive session state debugging
- Add useSessionRefreshMonitor to track auto-refresh events
- Add useSessionExpiryWarning for proactive expiry notifications
- Add useSessionPersistenceStatus to verify localStorage persistence
- Export from security package and Portal auth barrel

These hooks verify session persistence works correctly:
- useSessionDebug shows full session info, storage keys, timestamps
- useSessionRefreshMonitor tracks Supabase auto-refresh events
- useSessionExpiryWarning triggers when session nears expiry
- useSessionPersistenceStatus confirms localStorage is working

Use during development to verify session survives page refreshes.

--- a/packages/security/package.json
+++ b/packages/security/package.json
@@ -11,7 +11,8 @@
     "./supabase/oauth": "./src/supabase/oauth.ts",
     "./supabase/session": "./src/supabase/session.ts",
     "./auth": "./src/auth/context.tsx",
-    "./auth/context": "./src/auth/context.tsx"
+    "./auth/context": "./src/auth/context.tsx",
+    "./auth/useSessionDebug": "./src/auth/useSessionDebug.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
